--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.password=tqi2022
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+
+//create-drop ou crete na primeira execucao
+spring.jpa.hibernate.ddl-auto=update
