--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 
-//create-drop ou crete na primeira execucao
+#create-drop ou crete na primeira execucao
 spring.jpa.hibernate.ddl-auto=update
