Validando mensagens das classes modelos.

--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -3,3 +3,8 @@ spring.datasource.url=${DATABASE_URL}
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+
+#create-drop ou crete na primeira execucao
+spring.jpa.hibernate.ddl-auto=create-drop
